# tildone

./: .gitignore  .oxlintrc.json  MCP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts  wdio.conf.ts
.github/workflows/: release.yml
assets/: MOTION-EXPORT.md  tildone-motion.js
assets/animations/: 2a-wave-to-check.html  2c-tilde-dot.html  3a-til-done.html  3b-clock.html  3c-dot-loader.html  3d-drop-in.html
assets/brand/: tokens.css  tokens.json
scripts/: dev-clean.sh  e2e-build.sh  tauri.sh  worktree-slug.sh
skills/tildone/: SKILL.md
src/: App.css  App.tsx  agents.tsx  ai.ts  artifactStore.ts  db.ts  fileDrop.ts  hostStore.ts  lightbox.ts  main.tsx  paneStore.ts  reorder.ts  selectors.ts  settings.ts  store.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json  wdio.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/migrations/: 001_init.sql  002_trash.sql  003_subtasks_activity.sql  004_iso_timestamps.sql  005_changes.sql  006_repair_positions.sql  007_archived_at.sql  008_task_links.sql  009_activity_actor.sql  010_project_folder.sql  011_task_ref.sql  012_comments.sql  013_agent_claims.sql  014_unseen_at.sql  015_task_tags_changes.sql  016_pr_status.sql  017_claim_pid.sql  018_hosted_sessions.sql  019_task_images.sql  020_unbound_sessions.sql  021_shell_bind_identity.sql  022_secretary.sql
src-tauri/resources/: tildone-heartbeat.sh
src-tauri/src/: agent.rs  ai.rs  artifacts.rs  drops.rs  forge.rs  hookinstall.rs  host.rs  icons.rs  lib.rs  main.rs  pty.rs  secretary.rs  settingsfile.rs
src/components/: AISettings.tsx  Brand.tsx  CalendarView.tsx  CommandPalette.tsx  CompletedView.tsx  DailyPlan.tsx  FirstRun.tsx  Header.tsx  Icons.tsx  Kanban.tsx  Lightbox.tsx  Markdown.tsx  NotesView.tsx  ProjectDialog.tsx  ProjectGlyph.tsx  QuickAdd.tsx  QuitWarning.tsx  ReviewView.tsx  SessionContextRail.tsx  SessionPane.tsx  SessionsSection.tsx  SettingsDialog.tsx  Sidebar.tsx  TableView.tsx  TagManager.tsx  TaskEditor.tsx  TaskList.tsx  TaskRow.tsx  WeekView.tsx  prChip.tsx  ui.tsx  useSwitcher.ts
src/utils/: dailyPlan.ts  dates.ts  exportData.ts  images.ts  links.ts  markdownSections.ts  markdownTaskRefs.ts  presence.ts  quickParse.ts  ref.ts  sessions.ts
tests/: adapterMark.test.tsx  archiveOlderDone.test.ts  cardLinks.test.ts  dailyPlan.test.ts  doneClearsReviewTags.test.ts  doneWindow.test.ts  imageEmbed.test.ts  importDoneTags.test.ts  markdownNotes.test.ts  markdownSections.test.ts  notesSectionRender.test.tsx  paneStore.test.ts  position.test.ts  presencePulse.test.ts  quickParse.test.ts  sessionRows.test.ts  storeActivity.test.ts  storeComments.test.ts  storeLinks.test.ts  switcherSessions.test.ts
tests/e2e/: attachmentCleanup.spec.ts  contextRail.spec.ts  dropSecurity.spec.ts  firstRun.spec.ts  humanVerifyGlow.spec.ts  images.spec.ts  notesEmbed.spec.ts  secretary.spec.ts  sessions.spec.ts  smoke.spec.ts  terminalCollapse.spec.ts  terminalKeys.spec.ts
tests/e2e/support/: dataDir.ts  imageActions.ts  reset.ts
tests/support/: localStorageShim.ts
