[package]
name = "tildone"
version = "0.1.0"
description = "A calm desktop project & task manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tildone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
# Real argv via sysctl KERN_PROCARGS2 (TIL-136): the ps snapshot joins argv
# into one string, which is too lossy to prove id ownership from.
libc = "0.2"
# Artifact watching (F1): FSEvents on transcripts and git refs.
notify = "8"
# Waiting-detect (F2): a virtual screen per hosted session, so the grid's
# bottom rows can be classified as "at a prompt" once output quiesces.
vt100 = "0.15"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time", "net", "sync"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
sysinfo = "0.39.5"
rmcp = { version = "2.1.0", features = ["server", "transport-streamable-http-server", "schemars"] }
rusqlite = { version = "0.32", features = ["bundled"] }
# "json" is for the heartbeat route's Json extractor — rmcp brings its own transport
# for /mcp, so the default-off feature set had no need of it until now.
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio", "json"] }
tokio-util = "0.7.18"
base64 = "0.22"
tauri-plugin-wdio-webdriver = "1.2.0"
tauri-plugin-wdio = "1.2.0"

# The notification plugin's desktop click API is mobile-only, but the crate it
# drives on macOS can report clicks (wait_for_click). Depending on it directly —
# same version the plugin locks, so one shared crate instance (identity +
# delegate) — lets agent notifications open their task when clicked.
[target."cfg(target_os = \"macos\")".dependencies]
mac-notification-sys = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

